added a solution to task 4 and some testing with l-systems

--- a/04.Basic-Algebra-Exercise/basic_algebra_exercise_vt.ipynb
+++ b/04.Basic-Algebra-Exercise/basic_algebra_exercise_vt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1278,6 +1278,198 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import turtle\n",
+    "\n",
+    "# Define the L-system generator\n",
+    "def generate_lsystem(axiom, rules, iterations):\n",
+    "    current_string = axiom\n",
+    "    for _ in range(iterations):\n",
+    "        next_string = \"\"\n",
+    "        for char in current_string:\n",
+    "            next_string += rules.get(char, char)\n",
+    "        current_string = next_string\n",
+    "    return current_string\n",
+    "\n",
+    "# Define the drawing function using turtle\n",
+    "def draw_lsystem(t, instructions, angle, length):\n",
+    "    stack = []\n",
+    "    for command in instructions:\n",
+    "        if command == \"F\":\n",
+    "            t.forward(length)\n",
+    "        elif command == \"G\":\n",
+    "            t.penup()\n",
+    "            t.forward(length)\n",
+    "            t.pendown()\n",
+    "        elif command == \"+\":\n",
+    "            t.right(angle)\n",
+    "        elif command == \"-\":\n",
+    "            t.left(angle)\n",
+    "        elif command == \"[\":\n",
+    "            position = t.position()\n",
+    "            heading = t.heading()\n",
+    "            stack.append((position, heading))\n",
+    "        elif command == \"]\":\n",
+    "            position, heading = stack.pop()\n",
+    "            t.penup()\n",
+    "            t.goto(position)\n",
+    "            t.setheading(heading)\n",
+    "            t.pendown()\n",
+    "        elif command == \"C\":\n",
+    "            t.circle(length)\n",
+    "        elif command == \"S\":\n",
+    "            for _ in range(4):\n",
+    "                t.forward(length)\n",
+    "                t.right(90)\n",
+    "\n",
+    "def main():\n",
+    "    # L-system parameters\n",
+    "    axiom = \"F\"\n",
+    "    rules = {\n",
+    "        \"F\": \"F[+F]F[-F]FC\",\n",
+    "        \"C\": \"C-S+C\"\n",
+    "    }\n",
+    "    iterations = 4\n",
+    "    angle = 25\n",
+    "    length = 10\n",
+    "\n",
+    "    # Generate the L-system string\n",
+    "    lsystem_string = generate_lsystem(axiom, rules, iterations)\n",
+    "\n",
+    "    # Set up the turtle\n",
+    "    t = turtle.Turtle()\n",
+    "    screen = turtle.Screen()\n",
+    "    t.speed(0)  # Fastest drawing speed\n",
+    "    t.hideturtle()  # Hide the cursor\n",
+    "\n",
+    "    # Start from the bottom center of the screen\n",
+    "    screen.setup(width=800, height=800)\n",
+    "    t.penup()\n",
+    "    t.goto(0, -screen.window_height()//2 + 20)  # Adjust as necessary\n",
+    "    t.pendown()\n",
+    "    t.left(90)  # Start facing upwards\n",
+    "\n",
+    "    # Draw the L-system\n",
+    "    draw_lsystem(t, lsystem_string, angle, length)\n",
+    "\n",
+    "    # Close the turtle graphics window when clicked\n",
+    "    screen.exitonclick()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Terminator",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTerminator\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 79\u001b[0m\n\u001b[0;32m     76\u001b[0m     screen\u001b[38;5;241m.\u001b[39mexitonclick()\n\u001b[0;32m     78\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m---> 79\u001b[0m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[1], line 74\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m     71\u001b[0m t\u001b[38;5;241m.\u001b[39mpendown()\n\u001b[0;32m     72\u001b[0m t\u001b[38;5;241m.\u001b[39mleft(\u001b[38;5;241m90\u001b[39m)\n\u001b[1;32m---> 74\u001b[0m \u001b[43mdraw_lsystem\u001b[49m\u001b[43m(\u001b[49m\u001b[43mt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlsystem_string\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mangle\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlength\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     76\u001b[0m screen\u001b[38;5;241m.\u001b[39mexitonclick()\n",
+      "Cell \u001b[1;32mIn[1], line 33\u001b[0m, in \u001b[0;36mdraw_lsystem\u001b[1;34m(t, instructions, angle, length)\u001b[0m\n\u001b[0;32m     31\u001b[0m     t\u001b[38;5;241m.\u001b[39mpenup()\n\u001b[0;32m     32\u001b[0m     t\u001b[38;5;241m.\u001b[39mgoto(position)\n\u001b[1;32m---> 33\u001b[0m     \u001b[43mt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msetheading\u001b[49m\u001b[43m(\u001b[49m\u001b[43mheading\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     34\u001b[0m     t\u001b[38;5;241m.\u001b[39mpendown()\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m command \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n",
+      "File \u001b[1;32mc:\\Users\\Acer\\anaconda3\\Lib\\turtle.py:1937\u001b[0m, in \u001b[0;36mTNavigator.setheading\u001b[1;34m(self, to_angle)\u001b[0m\n\u001b[0;32m   1935\u001b[0m full \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_fullcircle\n\u001b[0;32m   1936\u001b[0m angle \u001b[38;5;241m=\u001b[39m (angle\u001b[38;5;241m+\u001b[39mfull\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2.\u001b[39m)\u001b[38;5;241m%\u001b[39mfull \u001b[38;5;241m-\u001b[39m full\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2.\u001b[39m\n\u001b[1;32m-> 1937\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_rotate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mangle\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Acer\\anaconda3\\Lib\\turtle.py:3295\u001b[0m, in \u001b[0;36mRawTurtle._rotate\u001b[1;34m(self, angle)\u001b[0m\n\u001b[0;32m   3293\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_update()\n\u001b[0;32m   3294\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_orient \u001b[38;5;241m=\u001b[39m neworient\n\u001b[1;32m-> 3295\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_update\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Acer\\anaconda3\\Lib\\turtle.py:2661\u001b[0m, in \u001b[0;36mRawTurtle._update\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   2659\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[0;32m   2660\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m screen\u001b[38;5;241m.\u001b[39m_tracing \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m-> 2661\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_update_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2662\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_drawturtle()\n\u001b[0;32m   2663\u001b[0m     screen\u001b[38;5;241m.\u001b[39m_update()                  \u001b[38;5;66;03m# TurtleScreenBase\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\Acer\\anaconda3\\Lib\\turtle.py:2647\u001b[0m, in \u001b[0;36mRawTurtle._update_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   2646\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_update_data\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m-> 2647\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscreen\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_incrementudc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2648\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mscreen\u001b[38;5;241m.\u001b[39m_updatecounter \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m   2649\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\Acer\\anaconda3\\Lib\\turtle.py:1293\u001b[0m, in \u001b[0;36mTurtleScreen._incrementudc\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1291\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m TurtleScreen\u001b[38;5;241m.\u001b[39m_RUNNING:\n\u001b[0;32m   1292\u001b[0m     TurtleScreen\u001b[38;5;241m.\u001b[39m_RUNNING \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m-> 1293\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m Terminator\n\u001b[0;32m   1294\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_tracing \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m   1295\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_updatecounter \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[1;31mTerminator\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import turtle\n",
+    "\n",
+    "def generate_lsystem(axiom, rules, iterations):\n",
+    "    current_string = axiom\n",
+    "    for _ in range(iterations):\n",
+    "        next_string = \"\"\n",
+    "        for char in current_string:\n",
+    "            next_string += rules.get(char, char)\n",
+    "        current_string = next_string\n",
+    "    return current_string\n",
+    "\n",
+    "def draw_lsystem(t, instructions, angle, length):\n",
+    "    stack = []\n",
+    "    for command in instructions:\n",
+    "        if command == \"F\":\n",
+    "            t.forward(length)\n",
+    "        elif command == \"G\":\n",
+    "            t.penup()\n",
+    "            t.forward(length)\n",
+    "            t.pendown()\n",
+    "        elif command == \"+\":\n",
+    "            t.right(angle)\n",
+    "        elif command == \"-\":\n",
+    "            t.left(angle)\n",
+    "        elif command == \"[\":\n",
+    "            position = t.position()\n",
+    "            heading = t.heading()\n",
+    "            stack.append((position, heading))\n",
+    "        elif command == \"]\":\n",
+    "            position, heading = stack.pop()\n",
+    "            t.penup()\n",
+    "            t.goto(position)\n",
+    "            t.setheading(heading)\n",
+    "            t.pendown()\n",
+    "        elif command == \"C\":\n",
+    "            t.circle(length)\n",
+    "        elif command == \"S\":\n",
+    "            for _ in range(4):\n",
+    "                t.forward(length)\n",
+    "                t.right(90)\n",
+    "        elif command == \"R\":\n",
+    "            t.pencolor(\"red\")\n",
+    "        elif command == \"B\":\n",
+    "            t.pencolor(\"blue\")\n",
+    "        elif command == \"W\":\n",
+    "            t.pensize(2)\n",
+    "        elif command == \"N\":\n",
+    "            t.pensize(1)\n",
+    "\n",
+    "def main():\n",
+    "    axiom = \"F\"\n",
+    "    rules = {\n",
+    "        \"F\": \"F[+F]F[-F]FC\",\n",
+    "        \"C\": \"C-S+C+R\",\n",
+    "        \"S\": \"F+S+FW+B\",\n",
+    "    }\n",
+    "    iterations = 4\n",
+    "    angle = 25\n",
+    "    length = 10\n",
+    "\n",
+    "    lsystem_string = generate_lsystem(axiom, rules, iterations)\n",
+    "\n",
+    "    t = turtle.Turtle()\n",
+    "    screen = turtle.Screen()\n",
+    "    t.speed(0)\n",
+    "    t.hideturtle()\n",
+    "\n",
+    "    screen.setup(width=800, height=800)\n",
+    "    t.penup()\n",
+    "    t.goto(0, -screen.window_height()//2 + 20)\n",
+    "    t.pendown()\n",
+    "    t.left(90)\n",
+    "\n",
+    "    draw_lsystem(t, lsystem_string, angle, length)\n",
+    "\n",
+    "    screen.exitonclick()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1302,13 +1494,41 @@
     "    Returns the run-length encoded version of the text\n",
     "    (numbers after symbols, length = 1 is skipped)\n",
     "    \"\"\"\n",
-    "    pass\n",
+    "    result = []\n",
+    "    count = 1\n",
+    "\n",
+    "    for i in range(1, len(text)):\n",
+    "        if text[i] == text[i - 1]:\n",
+    "            count += 1\n",
+    "        else:\n",
+    "            result.append(text[i - 1] + str(count) if count > 1 else text[i - 1])\n",
+    "            count = 1\n",
+    "\n",
+    "    result.append(text[i - 1] + str(count) if count > 1 else text[i - 1])\n",
+    "\n",
+    "    return \"\".join(result)\n",
+    "\n",
     "\n",
     "def decode(text):\n",
     "    \"\"\"\n",
     "    Decodes the text using run-length encoding\n",
     "    \"\"\"\n",
-    "    pass"
+    "    result = []\n",
+    "    count = 1\n",
+    "\n",
+    "    for i in range(1, len(text)):\n",
+    "        if text[i].isdigit():\n",
+    "            count = int(text[i])\n",
+    "            result.append(text[i - 1] * count)\n",
+    "        else:\n",
+    "            if text[i + 1].isdigit():\n",
+    "                continue\n",
+    "            else:\n",
+    "                result.append(text[i])\n",
+    "                count = 1\n",
+    "\n",
+    "\n",
+    "    return \"\".join(result)"
    ]
   },
   {
@@ -1317,17 +1537,24 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[30], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Tests\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Test that the functions work on their own\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m encode(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAABCCCDEEEE\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mA2BC3DE4\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m decode(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mA2BC3DE4\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAABCCCDEEEE\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Test that the functions really invert each other\u001b[39;00m\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A2BC3DE4\n",
+      "AABCCCDEEEE\n"
      ]
     }
    ],
+   "source": [
+    "print(encode(\"AABCCCDEEEE\"))\n",
+    "print(decode(\"A2BC3DE4\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Tests\n",
     "# Test that the functions work on their own\n",
