added problem 3 solution

--- a/10.Probability-and-Combinatorics-Exercise/Probability and Combinatorics Exercise - vt.ipynb
+++ b/10.Probability-and-Combinatorics-Exercise/Probability and Combinatorics Exercise - vt.ipynb
@@ -310,7 +310,7 @@
     "\n",
     "Order the people 1 to $r$. Every person's birthday is independent, so that means 365 days for the first, 365 days for the second, and so on: $365^r$ birthday possibilities in total.\n",
     "\n",
-    "We want no duplications of birthdays. The first person has 365 days to choose from, the second has 364, and so on. The $r$th person has $365-r+1$ days to choose from. Total: $365.364.363.\\cdots.(365 - r + 1)$\n",
+    "We want no duplications of birthdays. The first person has 365 days to choose from, the second has 364, and so on. The $r^{\\text{th}}$ person has $365-r+1$ days to choose from. Total: $365.364.363.\\cdots.(365 - r + 1)$\n",
     "\n",
     "The probability that no people share the same birthday is the fraction of all non-shared birthdays to all possible birthdays:\n",
     "$$ p(\\bar{A})=\\frac{365.364.363.\\cdots.(365 - r + 1)}{365^r} $$\n",
@@ -329,14 +329,37 @@
    "source": [
     "def calculate_birthday_probability(r):\n",
     "    \"\"\"\n",
-    "    Returns the probability of r people sharing the same birthday. A year is\n",
-    "    supposed to have 365 days\n",
+    "    Returns the probability of at least two people out of r people sharing the same birthday. \n",
+    "    Assumes a year has 365 days.\n",
     "    \"\"\"\n",
-    "    # Write your code here\n",
-    "    pass\n",
+    "    if r > 365:\n",
+    "        return 1.0  # More than 365 people, so at least two must share a birthday\n",
+    "    probability_no_shared = 1.0\n",
+    "    for i in range(r):\n",
+    "        probability_no_shared *= (365 - i) / 365\n",
+    "    return 1 - probability_no_shared\n",
     "\n",
-    "probabilities = [calculate_birthday_probability(r) for r in np.arange(2, 366)]\n",
-    "# TODO: Plot the probability distribution"
+    "probabilities = [calculate_birthday_probability(r) * 100 for r in np.arange(2, 366)]\n",
+    "\n",
+    "for r, probability in enumerate(probabilities, start=2):\n",
+    "    if probability > 50:\n",
+    "        threshold_people = r\n",
+    "        break\n",
+    "\n",
+    "plt.plot(np.arange(2, 366), probabilities, label='Probability of Shared Birthday')\n",
+    "plt.axhline(y=50, color='r', linestyle='--', label='50% Threshold')\n",
+    "plt.axvline(x=threshold_people, color='g', linestyle='--', label=f'{threshold_people} People')\n",
+    "\n",
+    "plt.annotate(f'{threshold_people} People\\n({probabilities[threshold_people - 2]:.2f}%)',\n",
+    "             xy=(threshold_people, 50), xytext=(threshold_people + 30, 60),\n",
+    "             arrowprops=dict(facecolor='black', shrink=0.05, width=0.5, headwidth=4, headlength=6, ))\n",
+    "\n",
+    "plt.xlabel('Number of People')\n",
+    "plt.ylabel('Probability of Shared Birthday (%)')\n",
+    "plt.title('Probability of At Least Two People Sharing the Same Birthday')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
    ]
   },
   {
